# xfoil-wrapper

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python_cicd.yml
src/xfoil/: __init__.py  xfoil_module.py
tests/: conftest.py  test_xfoil.py
